--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.1.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
@@ -16,10 +17,13 @@
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "^13.13.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
