--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.13.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
